<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QuestionQuiz</string>
    <string name="game_replay_bt">Rejouer</string>
    <string name="game_menu_bt">Menu</string>
    <string name="game_question_tv">Go</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="main_title">Quiz de questions</string>
    <string name="main_joueur1_label">Joueur 1</string>
    <string name="main_joueur2_label">Joueur 2</string>
    <string name="main_joueur1_tv">Nom du joueur 1</string>
    <string name="main_joueur2_tv">Nom du joueur 2</string>
    <string name="main_start_bt">Start</string>
    <string name="game_lancement_jeu">Partez !</string>
    <string name="game_fin_jeu">Fin de la partie</string>
    <string name="about_presentation_text">"Application créée dans le cadre de l\'atelier 33 android \nAuteur : Tobias Glauser \nVersion : "</string>
    <string name="about_validation">OK</string>
    <string name="about_title">A propos de l\'application</string>
    <string name="settings_title_text">Paramètres</string>
    <string name="settings_vitese_defilement">Vitesse de défilement des questions</string>
    <string name="settings_add_question">Ajouter une question</string>
    <string name="settings_add_question_hint">Question</string>
    <string name="settings_add_question_answer">Vrai</string>
    <string name="settings_add_question_bt">Ajouter la question</string>
    <string name="settins_close">Fermer</string>
    <string name="game_msg_winner">" a gagné !"</string>
    <string name="game_msg_equality">Egalité !</string>
    <string name="game_0_score">0</string>
</resources>