<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            style="@style/Widget.QuestionQuiz.Appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/settings_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/global_margin"
            android:layout_marginTop="30dp"
            android:text="@string/settings_vitese_defilement"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/settings_question_speed_sl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/global_margin"
            android:stepSize="0.5"
            android:valueFrom="0.5"
            android:valueTo="10" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settings_add_question_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_margin"
            android:text="@string/settings_add_question"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/settings_add_question_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.QuestionQuiz.TextInputLayout.Joueurs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="@dimen/global_margin"
                android:layout_marginBottom="@dimen/global_margin"
                android:hint="@string/settings_add_question_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/settings_add_question_question_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/editText_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/settings_add_question_response_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/settings_ident"
                android:layout_marginRight="@dimen/global_margin"
                android:text="@string/settings_add_question_answer"
                android:textSize="@dimen/checkBox_text_size"/>

            <Button
                android:id="@+id/settings_add_question_bt"
                style="@style/Widget.QuestionQuiz.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/global_margin"
                android:text="@string/settings_add_question_bt" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/settings_close_bt"
            style="@style/Widget.QuestionQuiz.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/global_margin"
            android:text="@string/settins_close" />
    </LinearLayout>


</ScrollView>